* bug: Sidebar icons are not vertically aligned with text; hierarchy is horizontally out of alignment.

--- a/color-spring.css
+++ b/color-spring.css
@@ -209,11 +209,11 @@ form .inputbutton {
 #subcontent ul.posts li {list-style-image:url(images/spring/post_yellow.gif);}
 #subcontent ul li li {list-style-image:url(images/spring/sub_categories_yellow.gif);}
 
-#subcontent li {background: url(images/spring/post_yellow.gif) no-repeat left top; list-style: none; padding-left: 20px !important;}
-#subcontent .list-post li {background: url(images/spring/post_yellow.gif) no-repeat left top; list-style: none; padding-left: 20px !important;}
-#subcontent .list-admin li {background: url(images/spring/author.gif) no-repeat left center;	list-style: none; padding-left: 20px !important;}
-#subcontent .list-comments li {background: url(images/spring/comments.gif) no-repeat left top; list-style: none; padding-left: 20px !important;}
-#subcontent .list-cat li {background: url(images/spring/categories_yellow.gif) no-repeat left top; list-style: none; padding-left: 20px !important;}
+#subcontent li {background-image: url(images/spring/post_yellow.gif);}
+#subcontent .list-post li {background-image: url(images/spring/post_yellow.gif);}
+#subcontent .list-admin li {background-image: url(images/spring/author.gif);}
+#subcontent .list-comments li {background-image: url(images/spring/comments.gif);}
+#subcontent .list-cat li {background-image: url(images/spring/categories_yellow.gif);}
 
 /* calendar
 --------------------------------------------------*/
