--- a/layout.css
+++ b/layout.css
@@ -487,7 +487,11 @@ form .info {padding-left:90px;}
 	padding:0 0 3px 0;
 	border-bottom:none;
 }
-#subcontent ul li ul ul {margin:0 0 0 16px;}
+#subcontent li,
+#subcontent .list-post li,
+#subcontent .list-admin li,
+#subcontent .list-comments li,
+#subcontent .list-cat li {background-repeat: no-repeat; background-position: left 5px; list-style: none; padding-left: 20px;}
 
 /* calendar
 --------------------------------------------------*/
